# RefGeo

./: .git-blame-ignore-revs  .gitmodules  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pytest.yml  python-publish.yml
src/ref_geo/: __init__.py  commands.py  env.py  models.py  routes.py  utils.py
src/ref_geo/migrations/: env.py  utils.py
src/ref_geo/migrations/versions/: 05a0ae652c13_ref_geo_french_regions_1970.py  0dfdbfbccd63_ref_geo_french_municipalities.py  10a587fb63d1_ref_geo_inpn_grids_20.py  175cdb17343f_ref_geo_inpn_grids_2.py  1fdac7036dd9_rewrite_fct_get_altitude_intersection.py  31ca7fd0d2ea_added_l_areas_description.py  3fdaa1805575_ref_geo_french_departments.py  4882d6141a41_add_regions_in_area_types.py  4d0c35ea0cfe_ref_geo_inpn_grids_50.py  557aadcf2e45_add_missing_size_hierachy.py  586613e2faeb_ref_geo_inpn_grids_1.py  681306b27407_fix_altitude_trigger.py  6afe74833ed0_ref_geo.py  795f6ea8ec45_cor_linear_area.py  7d6e98441e4c_ref_geo_inpn_grids_5.py  99591aa2dcf8_add_missing_size_hierachy.py  bc2fcc772b46_geom_4326.py  cb038e76d59c_fix_functions_local_srid.py  d02f4563bebe_ref_geo_french_regions.py  dea1645de8c0_ref_geo_point.py  e0ac4c9f5c0a_add_indexes_on_fk_referencing_id_area.py  e58071a29130_add_missing_size_hierachy.py  ede150d9afd9_ref_geo_inpn_grids_10.py  f22d70b8fcfa_add_areas_types_size_hierarchy.py  f7374cd6e38d_ref_geo_linear.py  fda887e7b578_correct_area_name_for_COM.py
src/ref_geo/tests/: test_ref_geo.py
