[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypn-ref-geo"
dynamic = ["version"]
description = "Référentiel géographique"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GNU AGPLv3" }
maintainers = [
    { name = "Parcs nationaux des Écrins et des Cévennes", email = "geonature@ecrins-parcnational.fr" }
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "alembic",
    "flask>=3.0",
    "flask-sqlalchemy",
    "flask-marshmallow",
    "python-dotenv",
    "sqlalchemy>=1.4,<2",
    "utils-flask-sqlalchemy>=0.4.2",
    "utils-flask-sqlalchemy-geo>=0.3.3",
    "psycopg2",
]

[project.optional-dependencies]
tests = ["pytest", "pytest-flask", "pytest-cov", "jsonschema"]

[project.urls]
Homepage = "https://github.com/PnX-SI/RefGeo"

[project.entry-points."alembic"]
migrations = "ref_geo.migrations:versions"

[project.entry-points."flask.commands"]
ref_geo = "ref_geo.commands:ref_geo"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["ref_geo"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.package-data]
"ref_geo.migrations" = ["data/*.sql"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["src"]

[tool.black]
line-length = 99
